terraform/modules/wha/chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wha-service
spec:
  selector:
    app: rg-wha
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
